2010-10-08  Kinuko Yasuda  <kinuko@chromium.org>

Reviewed by David Levin.

        Fix FileSystem path validation order to normalize '..' and '.' before restriction checks
        https://bugs.webkit.org/show_bug.cgi?id=47309

        Test: fast/filesystem/op-get-entry.html

        * fileapi/DOMFileSystemBase.cpp:
        (WebCore::DOMFileSystemBase::getFile): Fixed the path validation order.
        (WebCore::DOMFileSystemBase::getDirectory): Fixed the path validation order.
2010-10-08  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by David Levin.

        Fix FileSystem path validation order to normalize '..' and '.' before restriction checks
        https://bugs.webkit.org/show_bug.cgi?id=47309

        * fast/filesystem/op-get-entry-expected.txt: Updated.
        * fast/filesystem/resources/op-get-entry.js: Updated.


Canonical link: https://commits.webkit.org/59983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69382 268f45cc-cd09-0410-ab3c-d52691b4dbfc